<resources>
    <string name="app_name1">三富科技</string>
    <string name="preferenceCache">hnwrsf</string>
    <string name="error_net">请求错误：</string>
    <string name="error_scan">扫描失败</string>
    <string name="error_empty">无数据</string>
    <string name="error_json">数据解析</string>
    <string name="error_other">未知错误</string>
    <string name="error_data">返回数据错误</string>
    <string name="error_permission">授权失败</string>
    <string name="error_verify_code">验证码长度错误</string>
    <string name="error_pwd_length">请输入6-20位密码</string>
    <string name="error_pwd_confirm">请确认密码是否正确</string>
    <string name="error_phone">请输入正确的手机号码</string>
    <string name="error_plate">请输入正确的车牌号</string>
    <string name="error_user">用户名不能为空</string>
    <string name="error_license">营业执照错误</string>
    <string name="error_area">三级地址不能为空</string>
    <string name="net_empty_data">未获取到详细信息</string>
    <string name="empty_params">请求参数为空</string>
    <string name="unit_weight">KG</string>
    <string name="unit_size">m³</string>
    <string name="unit_num">件</string>
    <string name="unit_order">单</string>
    <string name="status_order_get">正在提货</string>
    <string name="status_order_send">正在送货</string>
    <string name="common_exit">退出登录</string>
    <string name="common_login">登录</string>
    <string name="common_code">验证码</string>
    <string name="common_code_success">发送成功</string>
    <string name="common_code_get">获取验证码</string>
    <string name="common_code_reacquire">重新获取</string>
    <string name="common_code_count">s后重新获取</string>
    <string name="common_input">请输入</string>
    <string name="common_select">请选择</string>
    <string name="common_select_order">订单号查询</string>
    <string name="common_pay">付款</string>
    <string name="common_pay_success">支付成功</string>
    <string name="common_pay_fail">支付失败</string>
    <string name="common_pay_cancel">支付取消</string>
    <string name="common_bill_apply">申请开票</string>
    <string name="common_comfirm">确认</string>
    <string name="common_default">默认</string>
    <string name="common_edit">编辑</string>
    <string name="common_delete">删除</string>
    <string name="common_delete_success">删除成功</string>
    <string name="common_submit">提交</string>
    <string name="common_save">保存</string>
    <string name="common_save_success">保存成功</string>
    <string name="common_add_success">新增成功</string>
    <string name="common_order_success">下单成功</string>
    <string name="common_cancel">取消</string>
    <string name="common_cancel_success">取消成功</string>
    <string name="common_confirm_success">确认成功</string>
    <string name="common_noticce_success">通知成功</string>
    <string name="common_confirm">确认</string>
    <string name="common_info">提示</string>
    <string name="common_add_manully">手动添加</string>
    <string name="common_area_select">地区选择</string>
    <string name="common_select_privince">请选择省份</string>
    <string name="common_select_city">请选择城市</string>
    <string name="common_select_district">请选择地区</string>
    <string name="common_date_min">1900-01-01</string>
    <string name="common_yes">是</string>
    <string name="common_no">否</string>
    <string name="common_rmb">¥</string>
    <string name="common_conjunction">-</string>
    <string name="common_select_img">\u3000▼</string>
    <string name="common_all">全部</string>
    <string name="common_total">合计</string>
    <string name="common_normal">正常</string>
    <string name="common_stop">停用</string>
    <string name="common_stop_success">停用成功</string>
    <string name="common_stop_visiable">显示停用</string>
    <string name="common_stop_invisiable">隐藏停用</string>
    <string name="common_loadmore">点击加载全部▼</string>
    <string name="common_dialog_delete">确认是否删除？</string>
    <string name="common_bill_total">统计</string>
    <string name="hint_pwd">6-20位密码</string>
    <string name="hint_address_detail">街道、门牌号等信息</string>
    <string name="login_user">用户名</string>
    <string name="login_phone_area">+86 ▼</string>
    <string name="login_phone">手机号</string>
    <string name="login_pwd">密码</string>
    <string name="login_pwd_confirm">确认密码</string>
    <string name="login_pwd_bcak">找回密码</string>
    <string name="login_welcome">您好，欢迎万瑞三富账号</string>
    <string name="login_register">注册</string>
    <string name="login_register_success">注册成功</string>
    <string name="login_register_phone">手机号注册</string>
    <string name="login_enter_user">密码登录</string>
    <string name="login_enter_phone">验证码登录</string>
    <string name="login_pwd_remember">记住密码</string>
    <string name="login_private">三富科技应用《隐私政策》</string>
    <string name="login_private_comfirm">阅读并确认《隐私政策》</string>
    <string name="main_menu">主页</string>
    <string name="main_menu_send">下单</string>
    <string name="main_menu_notice">通知</string>
    <string name="main_menu_company">物流公司</string>
    <string name="main_menu_mine">我的</string>
    <string name="main_receipt">签回单</string>
    <string name="main_send_notice">等通知放货</string>
    <string name="main_pending_payment">代收货款</string>
    <string name="main_insured_transportation">保价运输</string>
    <string name="main_statements">对账单</string>
    <string name="main_apply_month">申请月结</string>
    <string name="main_receive">我收的</string>
    <string name="main_shipping">我寄的</string>
    <string name="person_order">我的订单</string>
    <string name="person_info">我的资料</string>
    <string name="person_address">我的地址</string>
    <string name="person_invoice">我的发票</string>
    <string name="person_about">关于我们</string>
    <string name="person_phone">服务热线</string>
    <string name="person_bill">我的账单</string>
    <string name="person_company">所属公司</string>
    <string name="person_modify_pwd">修改密码</string>
    <string name="person_photo">头\u3000\u3000像</string>
    <string name="person_nick_name">昵称</string>
    <string name="person_name">姓名</string>
    <string name="person_phone_num">手机号</string>
    <string name="person_brithday">生日</string>
    <string name="person_sex">性别</string>
    <string name="person_email">邮箱</string>
    <string name="address_title_receive">收货地址</string>
    <string name="address_title_send">发货地址</string>
    <string name="address_detail">详细地址</string>
    <string name="address_area">收货地区</string>
    <string name="address_area_send">发货地区</string>
    <string name="address_company">收货公司</string>
    <string name="address_company_send">发货公司</string>
    <string name="address_contract">联系人</string>
    <string name="address_contract_tel">联系电话</string>
    <string name="address_menu">地址簿</string>
    <string name="address_ship_company">公司名称</string>
    <string name="address_ship_area">公司地区</string>
    <string name="address_ship_area_default">设为默认地址</string>
    <string name="outlets_search_title">网点查询</string>
    <string name="bill_company">公司名称</string>
    <string name="bill_tax">税号</string>
    <string name="bill_bank">开户行</string>
    <string name="bill_account">银行账户</string>
    <string name="bill_type">开票类型</string>
    <string name="bill_company_tel">公司电话</string>
    <string name="bill_company_address">公司地址</string>
    <string name="bill_contract">收货人</string>
    <string name="bill_contract_tel">收货电话</string>
    <string name="bill_contract_address">收货地址</string>
    <string name="bill_total">应付账款</string>
    <string name="bill_paid">已付账款</string>
    <string name="bill_unpay">未付账款</string>
    <string name="bill_rec_total">应收账款</string>
    <string name="bill_rec_paid">已收账款</string>
    <string name="bill_rec_unpay">未收账款</string>
    <string name="bill_clear">已结清</string>
    <string name="bill_unclear">未结清</string>
    <string name="send_company">物流公司</string>
    <string name="send_goods">货物信息</string>
    <string name="send_order_total">订单总价</string>
    <string name="send_order_price">订单单价</string>
    <string name="send_order_distotal">优惠金额</string>
    <string name="send_logistics">物流信息</string>
    <string name="send_base_fee">基础运费</string>
    <string name="send_goods_empty">请完善货物信息</string>
    <string name="send_value_add">增值服务</string>
    <string name="send_value_add_fee">增值费用</string>
    <string name="send_remark">备注</string>
    <string name="send_type">支付方式</string>
    <string name="send_date">取货时间</string>
    <string name="send_sumbit">提交订单</string>
    <string name="send_total">预估费用：</string>
    <string name="send_protocol">查看并同意《万瑞三富物流服务协议》</string>
    <string name="send_protocol_title">《服务协议》</string>
    <string name="send_protocol_check">未同意服务协议</string>
    <string name="send_goods_name">货物名称</string>
    <string name="send_good_remark">备注信息</string>
    <string name="send_good_other">其他</string>
    <string name="send_goods_weight">重量(KG)</string>
    <string name="send_goods_volume">体积(m³) </string>
    <string name="send_goods_density">重抛比T/m³</string>
    <string name="send_goods_num">件数</string>
    <string name="send_goods_send">寄件方式</string>
    <string name="send_goods_delivery">交货方式</string>
    <string name="send_goods_trans">运输方式</string>
    <string name="send_goods_insured">保价服务</string>
    <string name="send_goods_insured_hint">请输入保价服务</string>
    <string name="send_goods_insured_price">保价服务费</string>
    <string name="send_goods_collection">代收货款</string>
    <string name="send_goods_collection_price">代收服务费</string>
    <string name="send_goods_collection_hint">请输入代收货款</string>
    <string name="send_sign_back">签收单返还</string>
    <string name="send_sign_back_price">返单服务费</string>
    <string name="send_notice">等通知放货</string>
    <string name="sign_back_none">无需签收单</string>
    <string name="sign_back_paper">纸质签收单</string>
    <string name="sign_back_electronic">电子签收单</string>
    <string name="send_empty_address">请选择寄件人和发件人</string>
    <string name="send_empty_company">请选择物流公司</string>
    <string name="order_fee_total">费用信息</string>
    <string name="order_msg">订单信息</string>
    <string name="order_receive_tel">收件电话</string>
    <string name="order_receive_add">收件地址</string>
    <string name="order_receive_area">收件地区</string>
    <string name="order_send_tel">寄件电话</string>
    <string name="order_send_add">寄件地址</string>
    <string name="order_send_area">寄件地区</string>
    <string name="order_pay_notice">支付说明</string>
    <string name="order_fee_type">付款方式：</string>
    <string name="order_fee_user">付款账号：</string>
    <string name="order_fee_base">基础运费：</string>
    <string name="order_fee_trans">运输费用：</string>
    <string name="order_fee_send">送货费用：</string>
    <string name="order_fee_pick">提货费用：</string>
    <string name="order_value_add">增值服务：</string>
    <string name="order_fee_insure">保价金额：</string>
    <string name="order_fee_collection">代收货款：</string>
    <string name="order_wait_notice_yes">放货</string>
    <string name="order_wait_notice">等通知放货：</string>
    <string name="order_sign">签收单类型：</string>
    <string name="company_titlte">物流公司</string>
    <string name="company_titlte_register">申请物流公司</string>
    <string name="company_name">公司名称</string>
    <string name="company_address">公司地址</string>
    <string name="company_address_detail">地址详情</string>
    <string name="company_legal_person">法人</string>
    <string name="company_contact_person">联系人</string>
    <string name="company_contact_phone">联系电话</string>
    <string name="company_business_license">营业执照</string>
    <string name="company_upload_license">上传营业执照</string>
    <string name="company_upload_IDCard">上传法人身份证</string>
    <string name="company_upload_obverse">正面</string>
    <string name="company_upload_reverse">反面</string>
    <string name="company_upload_protocol">已阅读并同意以下协议：万瑞三富平台申请物流公司协议</string>
    <string name="company_order">订单中心</string>
    <string name="company_car">车辆管理</string>
    <string name="company_outlets">网点管理</string>
    <string name="company_checkbill">账单</string>
    <string name="company_checkbillDetail">账单详情</string>
    <string name="company_detail">公司资料</string>
    <string name="company_member">客户管理</string>
    <string name="company_worker">员工管理</string>
    <string name="company_driver">驾驶员</string>
</resources>