<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mine.bill.BillActivity">

    <com.yyy.wrsf.view.topview.TopView
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_size"
        android:background="@color/default_blue"
        app:topLeftIvShow="true"
        app:topLeftSrc="@mipmap/icon_back"
        app:topTitle="@string/address_title_receive"
        app:topTitleColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.yyy.wrsf.view.editclear.EditClearView
                android:id="@+id/ecv_company"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_common"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                app:ecHint="@string/bill_company"
                app:ecTitle="@string/bill_company"
                app:ecType="tv" />

            <com.yyy.wrsf.view.editclear.EditClearView
                android:id="@+id/ecv_tax"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_common"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                app:ecHint="@string/bill_tax"
                app:ecTitle="@string/bill_tax"
                app:ecType="tv" />

            <com.yyy.wrsf.view.editclear.EditClearView
                android:id="@+id/ecv_bank"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_common"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                app:ecHint="@string/bill_bank"
                app:ecTitle="@string/bill_bank"
                app:ecType="tv" />

            <com.yyy.wrsf.view.editclear.EditClearView
                android:id="@+id/ecv_account"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_common"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                app:ecHint="@string/bill_account"
                app:ecTextType="num"
                app:ecTitle="@string/bill_account"
                app:ecType="tv" />

            <com.yyy.wrsf.view.editclear.EditClearView
                android:id="@+id/ecv_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_common"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                app:ecEditable="false"
                app:ecHint="@string/bill_type"
                app:ecTitle="@string/bill_type"
                app:ecType="tv" />

            <com.yyy.wrsf.view.editclear.EditClearView
                android:id="@+id/ecv_company_tel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_common"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                app:ecHint="@string/bill_company_tel"
                app:ecTextType="num"
                app:ecTitle="@string/bill_company_tel"
                app:ecType="tv" />

            <com.yyy.wrsf.view.editclear.EditClearView
                android:id="@+id/ecv_company_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_common"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                app:ecHint="@string/bill_company_address"
                app:ecTitle="@string/bill_company_address"
                app:ecType="tv" />

            <com.yyy.wrsf.view.editclear.EditClearView
                android:id="@+id/ecv_contract"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_common"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                app:ecHint="@string/bill_contract"
                app:ecTitle="@string/bill_contract"
                app:ecType="tv" />

            <com.yyy.wrsf.view.editclear.EditClearView
                android:id="@+id/ecv_contract_tel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_common"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                app:ecHint="@string/bill_contract_tel"
                app:ecTextType="num"
                app:ecTitle="@string/bill_contract_tel"
                app:ecType="tv" />

            <com.yyy.wrsf.view.editclear.EditClearView
                android:id="@+id/ecv_contract_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_common"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                app:ecHint="@string/bill_contract_address"
                app:ecTitle="@string/bill_contract_address"
                app:ecType="tv" />


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_common"
        android:background="@drawable/btn_yellow"
        android:gravity="center"
        android:text="@string/common_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/text_common" />
</LinearLayout>