<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"

    tools:context=".login.PwdBackActivity">

    <com.yyy.wrsf.view.topview.TopView
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_size"
        android:background="@color/default_blue"
        app:topLeftIvShow="true"
        app:topLeftSrc="@mipmap/icon_back"
        app:topTitle="@string/login_register"
        app:topTitleColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10">

            <com.yyy.wrsf.view.LoginMiddleView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_80"
                app:lmText="@string/login_welcome"
                app:lmTitle="@string/login_register_phone" />

            <com.yyy.wrsf.view.editclear.EditClearView
                android:id="@+id/ecv_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_common"
                android:layout_marginTop="@dimen/dp_10"
                app:ecHint="@string/login_phone"
                app:ecTitle="@string/login_phone"
                app:ecType="tv" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/line_color" />

            <com.yyy.wrsf.view.VerificationCode
                android:id="@+id/vc_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_common"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/line_color" />

            <com.yyy.wrsf.view.editclear.EditClearView
                android:id="@+id/ecv_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_common"
                android:layout_marginTop="@dimen/dp_10"
                app:ecHint="@string/hint_pwd"
                app:ecTextLength="20"
                app:ecTitle="@string/login_pwd"
                app:ecType="tv" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/line_color" />

            <com.yyy.wrsf.view.editclear.EditClearView
                android:id="@+id/ecv_pwd_confirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_common"
                android:layout_marginTop="@dimen/dp_10"
                app:ecHint="@string/hint_pwd"
                app:ecTextLength="20"
                app:ecTitle="@string/login_pwd_confirm"
                app:ecType="tv" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/line_color" />

            <include layout="@layout/btn_login" />
        </LinearLayout>


    </ScrollView>


</LinearLayout>