<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg_gray"
    android:orientation="vertical"
    tools:context=".company.driver.DriverDetailActivity">

    <com.yyy.wrsf.view.topview.TopView
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_size"
        android:background="@color/default_blue"
        app:topLeftIvShow="true"
        app:topLeftSrc="@mipmap/icon_back"
        app:topRightTvShow="true"
        app:topRightText="@string/common_stop"
        app:topRightTextSize="@dimen/text_common_min"
        app:topRightTextColor="@color/white"
        app:topTitle="@string/company_worker"
        app:topTitleColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.yyy.wrsf.view.editclear.EditClearView
                android:id="@+id/ecv_name"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                app:ecEditable="false"
                app:ecHint="@string/person_name"
                app:ecTitle="@string/person_name"
                app:ecType="tv" />

            <com.yyy.wrsf.view.editclear.EditClearView
                android:id="@+id/ecv_tel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_common"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                app:ecEditable="false"
                app:ecHint="@string/person_phone_num"
                app:ecTextType="num"
                app:ecTitle="@string/person_phone_num"
                app:ecType="tv" />

            <com.yyy.wrsf.view.editclear.EditClearView
                android:id="@+id/ecv_petname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_common"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                app:ecEditable="false"
                app:ecHint="@string/person_nick_name"
                app:ecTitle="@string/person_nick_name"
                app:ecType="tv" />

            <com.yyy.wrsf.view.editclear.EditClearView
                android:id="@+id/ecv_sex"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_common"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@color/white"
                android:paddingLeft="@dimen/dp_5"
                android:paddingRight="@dimen/dp_5"
                app:ecEditable="false"
                app:ecHint="@string/person_sex"
                app:ecTitle="@string/person_sex"
                app:ecType="tv" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_common"
        android:background="@drawable/btn_yellow"
        android:gravity="center"
        android:text="@string/common_edit"
        android:textColor="@color/white"
        android:textSize="@dimen/text_common" />
</LinearLayout>